--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,9 @@
     "extends": [
         "airbnb-base"
     ],
+    "parser": "@babel/eslint-parser",
     "parserOptions": {
+        "sourceType": "module",
         "ecmaVersion": 12
     },
     "rules": {
