--- a/package.json
+++ b/package.json
@@ -22,8 +22,16 @@
   },
   "homepage": "https://github.com/jatin-parate/dsa-practice#readme",
   "devDependencies": {
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.12",
+    "babel-plugin-preval": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2"
+  },
+  "dependencies": {
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/node": "^7.16.8",
+    "@babel/preset-env": "^7.16.11"
   }
 }
