Added trapping-rain-water brute force

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Programs submitted to leet code",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "ts-node": "ts-node"
   },
   "repository": {
     "type": "git",
